# reviro_fastapi

./: .env  .env.test  .env.web  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.test.yaml  compose.web.yaml  pyproject.toml  requirements.txt
app/: main.py
app/config/: core.py  database.py
app/models/: company.py  product.py  user.py
app/routers/: auth.py  company.py  product.py
app/schemas/: auth.py  company.py  product.py
app/services/: root.py
app/services/api/: company.py  product.py
app/services/database/: company.py  product.py
app/utils/: pathfinder.py
tests/: conftest.py  test_company_api.py  test_product_api.py
tests/postman/: Reviro_fastAPI.postman_collection.json  Reviro_fastAPI.postman_environment.json
