[tool.poetry]
name = "reviro-fastapi"
version = "0.1.0"
description = ""
authors = ["eddy.di <eddy.di.fint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
